force-app/main/default/objects/Case/fields/Correct_Organization__c.field-meta.xml
<CustomField>
    <fullName>Correct_Organization__c</fullName>
    <description>This field will be required to be filled out before case is closed and Case Invoice Sub-Type is Wrong Organization</description>
    <label>Correct Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>