force-app/main/default/objects/Case/fields/Course_Format__c.field-meta.xml
<CustomField>
    <fullName>Course_Format__c</fullName>
    <label>Course Format</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Sub_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Blended</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>