force-app/main/default/objects/Case/fields/Course_Reg_Reason__c.field-meta.xml
<CustomField>
    <fullName>Course_Reg_Reason__c</fullName>
    <label>Course Reg Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Sub_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Number of Learners</fullName>
            </value>
            <value>
                <fullName>Offering Change</fullName>
            </value>
            <value>
                <fullName>Instructor Issue</fullName>
            </value>
            <value>
                <fullName>Facility Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>