force-app/main/default/objects/Case/fields/CRS__c.field-meta.xml
<CustomField>
    <fullName>CRS__c</fullName>
    <description>To be used in Service Cases with Type Invoicing</description>
    <inlineHelpText>Insert Course Record Sheet # associated with order/invoice.</inlineHelpText>
    <label>CRS #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>