force-app/main/default/objects/Case/fields/CRS_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>CRS_Total_Amount__c</fullName>
    <description>This field is the value found on the Payment Details page of a course record in the &quot;Total&quot; field.</description>
    <inlineHelpText>This field is the value found on the Payment Details page of a course record in the &quot;Total&quot; field.</inlineHelpText>
    <label>CRS Total Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>