force-app/main/default/objects/Case/fields/Customer_Follow_Up_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Customer_Follow_Up_Timestamp__c</fullName>
    <description>Social Care: Date/Time that the customer responds and status is set to &#39;Customer Follow Up&#39;</description>
    <label>Customer Follow Up Timestamp</label>
    <type>DateTime</type>
</CustomField>