force-app/main/default/objects/Case/fields/Customer_Last_name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Last_name__c</fullName>
    <label>Customer Last name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>