force-app/main/default/objects/Case/fields/Customer_Notification_Sent_On_API_del__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notification_Sent_On_API_del__c</fullName>
    <description>Time stamp indicating when customer notification was sent to the customer. Field will be updated from a workflow rule.</description>
    <inlineHelpText>Time stamp indicating when customer notification was sent to the customer.</inlineHelpText>
    <label>Customer Notification Sent On API</label>
    <type>DateTime</type>
</CustomField>