force-app/main/default/objects/Case/fields/Customer_Notified_of_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notified_of_Resolution__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box once customer has been notified. Date and time will be recorded below.</inlineHelpText>
    <label>Customer Notified of Resolution</label>
    <type>Checkbox</type>
</CustomField>