force-app/main/default/objects/Case/fields/D2_sub_D1__c.field-meta.xml
<CustomField>
    <fullName>D2_sub_D1__c</fullName>
    <description>This formula is used in the Case Duration field formula</description>
    <formula>Now() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D2 sub D1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>