force-app/main/default/objects/Case/fields/D4_sub_D3__c.field-meta.xml
<CustomField>
    <fullName>D4_sub_D3__c</fullName>
    <description>This formula is used to calculate the value for TIme until follow up</description>
    <formula>Follow_up_Date_Time__c - Now()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D4 sub D3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>