force-app/main/default/objects/Case/fields/Delivery_Channel__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Channel__c</fullName>
    <formula>IF(ISBLANK(Account.PHSS_Channel__c),NULL, 
SUBSTITUTE( 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;AED&quot;),&quot;AED,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;Authorized Provider&quot;),&quot;Authorized Provider,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;Business Client&quot;),&quot;Business Client,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;CEP Agency&quot;),&quot;CEP Agency,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;Full Service&quot;),&quot;Full Service,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;Licensed Training Provider&quot;),&quot;Licensed Training Provider,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;NAT Agency&quot;),&quot;NAT Agency,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;National Account Network&quot;),&quot;National Account Network,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;RCS Distributor&quot;),&quot;RCS Distributor,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;RCS Retail&quot;),&quot;RCS Retail,&quot;,NULL)+&quot;.&quot;,&quot;,.&quot;,NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Channel</label>
    <type>Text</type>
</CustomField>