force-app/main/default/objects/Case/fields/Escalate_To_Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Escalate_To_Sales_Director__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this checkbox to escalate this case to the Sales Director.</inlineHelpText>
    <label>Escalate To SD</label>
    <type>Checkbox</type>
</CustomField>