force-app/main/default/objects/Case/fields/Escalate_to_SDD__c.field-meta.xml
<CustomField>
    <fullName>Escalate_to_SDD__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this checkbox to escalate this case to the service delivery director.</inlineHelpText>
    <label>Escalate to SDD</label>
    <type>Checkbox</type>
</CustomField>