force-app/main/default/objects/Case/fields/First_ARC_Response_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_ARC_Response_Date_Time__c</fullName>
    <description>Social Care: Response time of first ARC agent to address the case</description>
    <label>First ARC Response Date/Time</label>
    <type>DateTime</type>
</CustomField>