force-app/main/default/objects/Case/fields/First_Call_Resolution__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Resolution__c</fullName>
    <description>This field is to assist with the readability for reports and dashboards. It will not be visible for page layouts.</description>
    <formula>IF( IsClosedOnCreate , &quot;First Call Resolution&quot;, &quot;Follow Up Resolution&quot;)</formula>
    <label>First Call Resolution</label>
    <type>Text</type>
</CustomField>