force-app/main/default/objects/Case/fields/First_Customer_Post_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Customer_Post_Date_Time__c</fullName>
    <description>Social Care: First customer post timestamp</description>
    <formula>CreatedDate</formula>
    <label>First Customer Post Date/Time</label>
    <type>DateTime</type>
</CustomField>