force-app/main/default/objects/Case/fields/Follow_up_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Date_Time__c</fullName>
    <inlineHelpText>When does the customer request follow up  ?</inlineHelpText>
    <label>Follow up Date/Time</label>
    <type>DateTime</type>
</CustomField>