force-app/main/default/objects/Case/fields/Follow_Up_Group__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Group__c</fullName>
    <label>Follow Up Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARC Management Escalations</fullName>
            </value>
            <value>
                <fullName>ARC Support Team</fullName>
            </value>
            <value>
                <fullName>ATG - On Hold</fullName>
            </value>
            <value>
                <fullName>CCO Specialist</fullName>
            </value>
            <value>
                <fullName>CEP</fullName>
            </value>
            <value>
                <fullName>Certificate Support</fullName>
            </value>
            <value>
                <fullName>Course Records</fullName>
            </value>
            <value>
                <fullName>Credit Card Payments</fullName>
            </value>
            <value>
                <fullName>CST Queue</fullName>
            </value>
            <value>
                <fullName>Current User</fullName>
            </value>
            <value>
                <fullName>Digital Certificate Escalation</fullName>
            </value>
            <value>
                <fullName>Instructor Support</fullName>
            </value>
            <value>
                <fullName>Instructor Updates</fullName>
            </value>
            <value>
                <fullName>NAT - Refunds</fullName>
            </value>
            <value>
                <fullName>New Instructors Corner</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>On Hold - Community Learner Registration</fullName>
            </value>
            <value>
                <fullName>On Hold - CST</fullName>
            </value>
            <value>
                <fullName>Open BL Offerings</fullName>
            </value>
            <value>
                <fullName>Outbound Group Queue</fullName>
            </value>
            <value>
                <fullName>Payment Policy</fullName>
            </value>
            <value>
                <fullName>Pending Field Request</fullName>
            </value>
            <value>
                <fullName>Problem Records</fullName>
            </value>
            <value>
                <fullName>Quick Start</fullName>
            </value>
            <value>
                <fullName>RDC Queue</fullName>
            </value>
            <value>
                <fullName>Red Cross Store</fullName>
            </value>
            <value>
                <fullName>Registration Support Queue</fullName>
            </value>
            <value>
                <fullName>Registration Support Queue - On Hold</fullName>
            </value>
            <value>
                <fullName>TSC CEP - Sponsored</fullName>
            </value>
            <value>
                <fullName>TSC NAT - Inquiries</fullName>
                <label>TSC NAT/CEP - Inquiries</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>