force-app/main/default/objects/Case/fields/Follow_Up_Reason__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Reason__c</fullName>
    <label>Follow Up Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card not handy</fullName>
            </value>
            <value>
                <fullName>Funds not available</fullName>
            </value>
            <value>
                <fullName>Need approval (employer, family mbr, other)</fullName>
            </value>
            <value>
                <fullName>Need to check schedule</fullName>
            </value>
            <value>
                <fullName>Need to verify type of class cancedlled</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unable to Reach Contact</fullName>
            </value>
            <value>
                <fullName>Window shopping - Not ready to buy</fullName>
            </value>
            <value>
                <fullName>Group Sales Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>