force-app/main/default/objects/Case/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <length>250</length>
    <type>Text</type>
</CustomField>