force-app/main/default/objects/Case/fields/GP_Correct_Account__c.field-meta.xml
<CustomField>
    <fullName>GP_Correct_Account__c</fullName>
    <description>Used for Service Cases of Type Invoice</description>
    <inlineHelpText>Account where payment SHOULD be applied.</inlineHelpText>
    <label>CFS Correct Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>