force-app/main/default/objects/Case/fields/GP_Current_Account__c.field-meta.xml
<CustomField>
    <fullName>GP_Current_Account__c</fullName>
    <description>Used for Service Cases of Type Invoice</description>
    <inlineHelpText>Account where payment HAS BEEN applied.</inlineHelpText>
    <label>CFS Current Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>